--- a/app/views/admin/temps/_temp_index.html.erb
+++ b/app/views/admin/temps/_temp_index.html.erb
@@ -10,7 +10,7 @@
 	</div>
 	
 	<% form_tag :action => :deleteSelection, :method => 'post' do %>			
-
+	<input type="hidden" id="all_checked" value="false">
 	<table  class="board_table">
 		<tr>
 			<td align="left">
@@ -38,7 +38,7 @@
 	            <td class="board_thead" width="65px"><center>서브카테고리</center></td>
 	            <td class="board_thead" width="65px"><center>등록일</center></td>	
 				<td class="board_thead" width="70px"><center>복제수/조회수</center></td>
-				<td class="board_thead" width="30px"><center>삭제</center></td>				
+				<td class="board_thead" width="30px"><center class="check_all" style="cursor:hand;">선택</center></td>				
 	        </tr>
 	    </thead>
 	 
@@ -77,7 +77,7 @@
 				</td>								
 	            <td class="board_tbody" width="65px"><center><%= temp.created_at.strftime('%Y-%m-%d') %></center></td>
 	            <td class="board_tbody" width="70px"><center><%= temp.copy_cnt.to_s+"/"+temp.hit_cnt.to_s %></center></td>
-				<td class="board_tbody" width="30px"><center><input type="checkbox" name="chk[<%= temp.id %>]"></center></td>
+				<td class="board_tbody" width="30px"><center><input type="checkbox" class="chk_box" name="chk[<%= temp.id %>]"></center></td>
 	        </tr>
 	        <% @page_num -= 1
 			end %>
