--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,4 @@
-<b>다이어리샵 </b>
-경기도 남양주시 와부읍 도곡리 263-1 &nbsp; T.031-521-2947 &nbsp; F.031-521-5269 
-www.diaryshop.kr
+<b>다이어리샵 </b>경기도 남양주시 와부읍 도곡리 263-1 &nbsp; T.031-521-2947 &nbsp; F.031-521-5269 www.diaryshop.kr
 
 
 <!-- <b>ㅣ주ㅣ성도GL  〮ㅣ주ㅣ성도솔루윈 </b>100-861
