--- a/app/views/admin/faqs/_faq_edit.html.erb
+++ b/app/views/admin/faqs/_faq_edit.html.erb
@@ -1,12 +1,20 @@
-<h1>Editing faq</h1>
+<h1>FAQ 수정</h1>
 
-<% form_for(@faq) do |f| %>
+<% form_for @faq, :url => { :action => "update" } do |f| %>
   <%= f.error_messages %>
-
+  <input type="hidden" name="faq[id]" value="<%= @faq.id %>">
+<p>
+    <%= f.label :'질문' %><br />
+    <%= f.text_area :question %>
+  </p>
   <p>
-    <%= f.submit 'Update' %>
+    <%= f.label :'대답' %><br />
+    <%= f.text_area :answer %>
+  </p>
+	
+  <p>
+    <%= f.submit 'Update' %><input type='button' value="목록" style="cursor:hand;" onclick="location.href='/admin/faqs/'">
   </p>
 <% end %>
 
-<%= link_to 'Show', @faq %> |
-<%= link_to 'Back', admin_faqs_path %>
+
