--- a/app/views/layouts/admin_layout.html.erb
+++ b/app/views/layouts/admin_layout.html.erb
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="/css/order.css" media="screen" rel="stylesheet" type="text/css" />	
+<script type="text/javascript" src="/js/jquery-1.4.2.js"></script>
+<script type="text/javascript" src="/js/jquery.admin.common.js"></script>
+
 </head>
 <body>
 <%= yield %>	
