--- a/app/views/admin/notices/_notice_index.html.erb
+++ b/app/views/admin/notices/_notice_index.html.erb
@@ -9,7 +9,8 @@
 
 	</div>
 
-	<% form_tag '/admin/notices/deleteSelection', :method => 'post' do %>			
+	<% form_tag '/admin/notices/deleteSelection', :method => 'post' do %>
+	<input type="hidden" id="all_checked" value="false">			
 		<table class="board_table">
 		    <thead class="board_thead">
 		        <tr>
@@ -17,7 +18,7 @@
 		            <td class="board_thead" width="520px"><center>제목</center></td>
 		            <td class="board_thead" width="80px"><center>등록일</center></td>
 		            <td class="board_thead" width="65px"><center>조회</center></td>
-		            <td class="board_thead" width="30px"><center>삭제</center></td>			
+		            <td class="board_thead" width="30px"><center class="check_all" style="cursor:hand;">선택</center></td>			
 		        </tr>
 		    </thead>
 
@@ -28,7 +29,7 @@
 		            <td class="table_f" width="520px"><a href="/admin/notices/<%=notice.id%>?search=<%=params[:search]%>&page=<%=params[:page]%>"><%= notice.title %></a></td>
 		            <td class="table_g" width="80px"><center><%= notice.created_at.strftime('%Y-%m-%d') %></center></td>
 		            <td class="table_g" width="65px"><center><%= notice.hit_cnt %></center></td>
-					<td class="table_g" width="30px"><center><input type="checkbox" name="chk[<%= notice.id %>]"></center></td>
+					<td class="table_g" width="30px"><center><input type="checkbox"  name="chk[<%= notice.id %>]"></center></td>
 		        </tr>
 				<%end %>
 				<% 	if params[:page].to_i == 0 or params[:page].to_i == 1
@@ -45,7 +46,7 @@
 		            <td class="board_tbody" width="520px"><a href="/admin/notices/<%=news.id%>?search=<%=params[:search]%>&page=<%=params[:page]%>"><%= news.title %></a></td>
 		            <td class="board_tbody" width="80px"><center><%= news.created_at.strftime('%Y-%m-%d') %></center></td>
 		            <td class="board_tbody" width="65px"><center><%= news.hit_cnt %></center></td>
-					<td class="board_tbody" width="30px"><center><input type="checkbox" name="chk[<%= news.id %>]"></center></td>
+					<td class="board_tbody" width="30px"><center><input type="checkbox" class="chk_box" name="chk[<%= news.id %>]"></center></td>
 		        </tr>
 		        <% @page_num -= 1
 				end %>
