--- a/app/views/admin/myadmins/_admin_index.html.erb
+++ b/app/views/admin/myadmins/_admin_index.html.erb
@@ -8,7 +8,7 @@
 </div>
 	<br>
 	<% form_tag :action => :deleteSelection, :method => 'post' do %>			
-	
+	<input type="hidden" id="all_checked" value="false">
 	<table class="board_table">
 	    <thead class="board_thead">
 	        <tr>
@@ -18,7 +18,7 @@
 	            <td class="board_thead" width="80px"><center>비밀번호</center></td>
 	            <td class="board_thead" width="80px"><center>이메일</center></td>
 	            <td class="board_thead" width="65px"><center>등록일</center></td>
-				<td class="board_thead" width="30px"><center>삭제</center></td>
+				<td class="board_thead" width="30px"><center class="check_all" style="cursor:hand;">선택</center></td>
 	        </tr>
 	    </thead>
 	 
@@ -39,7 +39,7 @@
 				<td class="board_tbody" width="80px"><center><%= myadmin.password %></center></td>
 	            <td class="board_tbody" width="80px"><center><%= myadmin.email %></center></td>
 	            <td class="board_tbody" width="80px"><center><%= myadmin.created_at.strftime('%Y-%m-%d') %></center></td>	
-				<td class="board_tbody" width="30px"><center><input type="checkbox" name="chk[<%= myadmin.id %>]"></center></td>
+				<td class="board_tbody" width="30px"><center><input type="checkbox" class="chk_box" name="chk[<%= myadmin.id %>]"></center></td>
 	        </tr>
 	        <% @page_num -= 1
 			end %>
