--- a/app/views/admin/myadmins/myadmin.html.erb
+++ b/app/views/admin/myadmins/myadmin.html.erb
@@ -1,12 +1,9 @@
-<html>
-<head>
-<title>Web Top Print Shop == Admin ==</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
 <link href="/css/admin.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="/css/admin_main.css" media="screen" rel="stylesheet" type="text/css"/>
-<link href="/css/admin_style.css" media="screen" rel="stylesheet" type="text/css" />	
-</head>
-<body>
+<link href="/css/admin_style.css" media="screen" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/js/jquery-1.4.2.js"></script>
+<script type="text/javascript" src="/js/jquery.admin.common.js"></script>	
 
 	<div id="admincontents_wrapper">
 		<!-- <top 메뉴입니다.> -->
@@ -54,8 +51,6 @@
 			</div>
 		</div>
 		</div>	
-</body>
-</html>
 
 
 
