--- a/app/views/admin/users/_user_index.html.erb
+++ b/app/views/admin/users/_user_index.html.erb
@@ -11,7 +11,7 @@
 	</div>
 	
 	<% form_tag :action => :deleteSelection, :method => 'post' do %>			
-	
+	<input type="hidden" id="all_checked" value="false">
 	<table class="board_table">
 	    <thead class="board_thead">
 	        <tr>
@@ -21,7 +21,7 @@
 	            <td class="board_thead" width="80px"><center>비밀번호</center></td>
 	            <td class="board_thead" width="80px"><center>이메일</center></td>
 	            <td class="board_thead" width="65px"><center>등록일</center></td>
-				<td class="board_thead" width="30px"><center>삭제</center></td>
+				<td class="board_thead" width="30px"><center class="check_all" style="cursor:hand;">선택</center></td>
 	        </tr>
 	    </thead>
 	 
@@ -42,7 +42,7 @@
 				<td class="board_tbody" width="80px" onClick="location.href='/admin/users/<%= user.id.to_s %>'" style="cursor:hand;"><center><%= user.password %></center></td>
 	            <td class="board_tbody" width="80px" onClick="location.href='/admin/users/<%= user.id.to_s %>'" style="cursor:hand;"><center><%= user.email %></center></td>
 	            <td class="board_tbody" width="80px" onClick="location.href='/admin/users/<%= user.id.to_s %>'" style="cursor:hand;"><center><%= user.created_at.strftime('%Y-%m-%d') %></center></td>	
-				<td class="board_tbody" width="30px"><center><input type="checkbox" name="chk[<%= user.id %>]"></center></td>
+				<td class="board_tbody" width="30px"><center><input type="checkbox" class="chk_box" name="chk[<%= user.id %>]"></center></td>
 	        </tr>
 	        <% @page_num -= 1
 			end %>
